<resources>
    <string name="app_name">커피몇잔</string>


    <string name="confirm">확인</string>
    <string name="cancel">취소</string>

    <string name="menu_home">홈</string>
    <string name="menu_camera">추가</string>
    <string name="menu_info">정보</string>

    <string name="input_store_name">어디서 마셨나요?</string>
    <string name="input_coffee_name">어떤 커피 드셨어요?</string>
    <string name="input_coffee_hint">마신 커피 종류</string>
    <string name="input_store_hint">카페 상호명</string>

    <string name="my_coffee_stat">나의 커피 통계</string>
    <string name="coffee_until_today">오늘까지 마신 커피</string>
    <string name="total">총</string>
    <string name="cup">잔</string>

</resources>
