<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.teamds.coffeecounter.viewmodel.InfoViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.InfoFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/my_coffee_stat"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"/>

        <com.teamds.coffeecounter.ui.component.InfoListTile
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:leading="@drawable/americano_icon"
            app:title="@string/coffee_until_today"
            app:prefix="@string/total"
            app:value="6"
            app:suffix="@string/cup" />

    </LinearLayout>
</layout>