<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <data>
        <import type="android.view.View"/>
        <variable
            name="vm"
            type="com.teamds.coffeecounter.viewmodel.CameraViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image"
                android:layout_width="90dp"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:src="@drawable/americano_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_store_name"
                android:textColor="@color/colorPrimaryDark" />

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/text_input_store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:background="@null"
                android:cursorVisible="true"
                android:hint="@string/input_store_hint"
                android:textColorHint="@color/textSub"
                android:textCursorDrawable="@drawable/cursor_background" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/input_coffee_name"
                android:textColor="@color/colorPrimaryDark" />

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/text_input_coffee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:background="@null"
                android:cursorVisible="true"
                android:hint="@string/input_coffee_hint"
                android:textColorHint="@color/textSub"
                android:textCursorDrawable="@drawable/cursor_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_confirm"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginVertical="4dp"
                    android:layout_marginEnd="6dp"
                    android:layout_weight="7"
                    android:text="@string/confirm"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    app:backgroundTint="@color/colorPrimary"
                    app:cornerRadius="12dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginVertical="4dp"
                    android:layout_marginStart="6dp"
                    android:layout_weight="3"
                    android:text="@string/cancel"
                    android:textColor="@color/text"
                    app:backgroundTint="@color/background"
                    app:cornerRadius="12dp"
                    app:strokeColor="@color/textSub"
                    app:strokeWidth="1dp" />


            </LinearLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:visibility="@{vm.isLoading() ? View.VISIBLE : View.GONE}"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:clickable="true">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:indeterminateTint="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>